--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
-  "name": "@getstation/electron-google-oauth2",
-  "version": "2.1.0",
+  "name": "@nosferatu500/electron-google-oauth2",
+  "version": "3.0.2",
   "description": "A Google OAuth2 module for your Electron app.",
   "license": "MIT",
-  "repository": "getstation/electron-google-oauth2",
+  "repository": "nosferatu500/electron-google-oauth2",
   "main": "./lib/index",
   "types": "./lib/index",
   "author": {
     "name": "Joël Charles",
     "email": "joel@getstation.com"
   },
+  "publishConfig": {
+    "access": "public"
+  },
+  "contributors": [
+    "Vitalii Shvetsov"
+  ],
   "scripts": {
     "build": "tsc -p .",
     "prepublishOnly": "yarn run build"
@@ -21,17 +27,17 @@
     "access token"
   ],
   "devDependencies": {
-    "electron": "^7.1.11",
-    "typescript": "^3.7.5"
+    "electron": "^13.6.9",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
-    "google-auth-library": "^5.9.2"
+    "google-auth-library": "^8.3.0"
   },
   "engines": {
-    "node": ">= 8.0"
+    "node": ">= 14.0"
   },
   "bugs": {
-    "url": "https://github.com/getstation/electron-google-oauth2/issues"
+    "url": "https://github.com/nosferatu500/electron-google-oauth2/issues"
   },
-  "homepage": "https://github.com/getstation/electron-google-oauth2#readme"
+  "homepage": "https://github.com/nosferatu500/electron-google-oauth2#readme"
 }
