--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nosferatu500/electron-google-oauth2",
-  "version": "3.0.2",
+  "version": "3.0.3",
   "description": "A Google OAuth2 module for your Electron app.",
   "license": "MIT",
   "repository": "nosferatu500/electron-google-oauth2",
@@ -27,14 +27,15 @@
     "access token"
   ],
   "devDependencies": {
+    "@types/node": "^16.18.16",
     "electron": "^13.6.9",
-    "typescript": "^4.7.4"
+    "typescript": "^4.9.5"
   },
   "dependencies": {
-    "google-auth-library": "^8.3.0"
+    "google-auth-library": "^8.7.0"
   },
   "engines": {
-    "node": ">= 14.0"
+    "node": ">= 16.0"
   },
   "bugs": {
     "url": "https://github.com/nosferatu500/electron-google-oauth2/issues"
